# fluent-python-book-examples

./: pyproject.toml
examples/: Notebook.ipynb  __init__.py  chapter1.py  chapter2.py  chapter3.py
